--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
     "rxjs": "^6.6.3",
+    "socket.io-client": "^2.3.1",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
